Fixed container spacing issue

--- a/assets/main.css
+++ b/assets/main.css
@@ -14,10 +14,10 @@ body, html {
 }
 
 #app {
-    width: calc(100% - 60vw);
     min-height: 100%;
-    padding: 0 30vw;
-    padding-bottom: 2rem;
+    max-width: 60rem;
+    margin: auto;
+    padding: 1rem 2rem 2rem;
 }
 
 h1 {
@@ -123,18 +123,7 @@ li {
 
 /* Media queries */
 
-@media only screen and (max-width: 1600px) {
-    #app {
-        width: calc(100% - 10rem);
-        padding: 0 5rem;
-    }
-}
-
 @media only screen and (max-width: 992px) {
-    #app {
-        width: calc(100% - 2rem);
-        padding: 0 1rem;
-    }
     #link-list {
         flex-direction: column;
         align-items: center;
